# Network-L4-Monitoring-Common-Cloud-Providers

./: LICENSE  README.md
l4scope/: .gitignore  Cargo.toml  README.md
l4scope/.claude/agents/: release.md
l4scope/.github/workflows/: ci.yml  release.yml
l4scope/bpf/: l4scope.bpf.c
l4scope/config/: l4scope.toml
l4scope/crates/l4scope-agent/: Cargo.toml
l4scope/crates/l4scope-agent/src/: main.rs
l4scope/crates/l4scope-capture/: Cargo.toml  build.rs
l4scope/crates/l4scope-capture/src/: ebpf.rs  etw.rs  lib.rs  live.rs  parse.rs  pcapio.rs  synthetic.rs
l4scope/crates/l4scope-capture/tests/: pcap_replay.rs
l4scope/crates/l4scope-core/: Cargo.toml
l4scope/crates/l4scope-core/src/: config.rs  error.rs  lib.rs  types.rs
l4scope/crates/l4scope-detect/: Cargo.toml
l4scope/crates/l4scope-detect/src/: detectors.rs  engine.rs  flow.rs  lib.rs  window.rs
l4scope/crates/l4scope-detect/tests/: synthetic_e2e.rs
l4scope/crates/l4scope-export/: Cargo.toml
l4scope/crates/l4scope-export/src/: attribution.rs  http.rs  json.rs  lib.rs  metrics.rs  otlp.rs
l4scope/deploy/: Dockerfile  daemonset.yaml  l4scope.service
l4scope/deploy/otel/: collector-config.yaml  collector-daemonset.yaml
l4scope/docs/: AGENTS.md  ARCHITECTURE.md  BUILD_NATIVE.md  DETECTORS.md  OTEL.md  TESTING.md
l4scope/scripts/: run-tests.sh
l4scope/testdata/: sample.pcap
